# backend/public/swagger.json
@@ -640,12 +640,15 @@
         "type": "object",
         "description": "From T, pick a set of properties whose keys are in the union K"
       },
-      "Partial_Pick_Area.name-or-locationDescription__": {
+      "Partial_Pick_Area.name-or-locationDescription-or-plantId__": {
         "properties": {
           "name": {
             "type": "string"
           },
           "locationDescription": {
+            "type": "string"
+          },
+          "plantId": {
             "type": "string"
           }
         },
@@ -1554,7 +1557,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Partial_Pick_Area.name-or-locationDescription__"
+                "$ref": "#/components/schemas/Partial_Pick_Area.name-or-locationDescription-or-plantId__"
               }
             }
           }
